--- a/index.html
+++ b/index.html
@@ -11,6 +11,887 @@
    <link rel="stylesheet" href="style.css/style.css" class="">
 </head>
 <body>
+     <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,400&display=swap');
+
+:root{
+  --main-color: #d3ad7f;
+  --black: #13131a;
+  --bg: #d3ad7f;
+  --border: 1rem solid rgba(105,105,105);
+}
+
+*{
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  text-transform: capitalize;
+  transition: 0.2s linear;
+
+    box-sizing: border-box;
+
+}
+html{
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 9rem;
+  scroll-behavior: smooth;
+}
+html::-webkit-scrollbar{
+  width: 0.8rem;
+}
+
+html::-webkit-scrollbar-track{
+  background: transparent;
+}
+
+html::-webkit-scrollbar-thumb{
+  background: #fff;
+  border-radius: 5rem;
+}
+body{
+  background: var(--main-color);
+}
+section {
+  padding: 9rem 7%;
+}
+.btn{
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 0.9rem 3rem;
+  font-size: 1.7rem;
+  color: #fff;
+  background-color: var(--black);
+  cursor: pointer;
+}
+
+.btn:hover{
+  letter-spacing: 0.2rem;
+  color:#d3ad7f;
+}
+.heading h1{
+  text-align: center;
+  color: #000;
+  text-transform: uppercase;
+  padding-bottom: 3.5rem;
+  font-size: 4rem;
+}
+.heading span{
+  font-size: 5rem;
+  text-transform: uppercase;
+  color:#000;
+  text-align: center;
+  background: var(--main-color);
+
+}
+.heading h3{
+  font-size: 1px;
+  color:#000;
+}
+
+.header{
+  background: var(--main-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 7%;
+  border-bottom: var(--border);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+.header .logo img{
+  height: 5rem;
+
+}
+.header .navbar{
+  position: absolute;
+  top:100%;
+  background-color: var(--main-color);
+  width:30rem;
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+  align-items: center;
+  min-height: 8vh;
+  left:0px;
+  right:0px;
+  height: 100%;
+  width:100%;
+}
+.header .navbar a{
+ margin: 1.5rem;
+ padding:3rem;
+font-size: 2rem;
+
+color:#000;
+}
+.header .navrbar a:hover{
+  color: #000;
+ }
+ .header .icons div{
+  color: #fff;
+  cursor: pointer;
+  font-size: 2.5rem;
+  margin-left: 2rem;
+}
+ #main-btn{
+  display: none;
+  background-color: red;
+}
+.header .searchform{
+  position: absolute;
+  top: 115%;
+  right: 7%;
+  background-color: #000;
+  width: 100rem;
+  height: 50rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform: top;
+}
+.header .searchform .active{
+  transform: scaleY(0);
+}
+.header .searchform input{
+  height: 100%;
+  width: 100%;
+  font-size: 1.6rem;
+  color: #000;
+  padding: 1rem;
+  text-transform: none;
+}
+.header .searchform label{
+  cursor: pointer;
+  font-size: 2.2rem;
+  margin-right: 1.5rem;
+  color: #000;
+}
+.header .searchform label:hover{
+  color: #000;
+}
+.header .cartitemscontainer{
+  position: absolute;
+  top: 100%; right: -100%;
+  height: calc(100vh - 9.5rem);
+  width: 35rem;
+  background: #fff;
+  padding: 0 1.5rem;
+}
+.header .cartitemscontainer .active{
+right:0;
+}
+.header .cartitemscontainer .cartitem{
+  position: relative;
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.header .cartitemscontainer .cartitem .fa-times{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 2rem;
+  cursor: pointer;
+  color: #000;
+}
+
+.header .cartsitemscontainer .cartitem .fa-times:hover{
+  color: #000;
+}
+.header .cartitemscontainer .cartitem img{
+  height: 7rem;
+}
+.header .cartitemscontainer .cartitem .content h3{
+  font-size: 2rem;
+  color: #000;
+  padding-bottom: 0.5rem;
+}
+.header .cartitemscontainer .cartitem.content .price{
+  font-size: 1.5rem;
+  color: #000;
+}
+.header .cartitemscontainer .btn{
+  width: 100%;
+  text-align: center;
+  color: var(--black);
+  padding: 1rem;
+}
+.home{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background: url(../HTML/images/cart-item-2.jpg) no-repeat;
+  background-size:cover;
+  background-position: center;
+  
+}
+
+.home .content{
+  max-width: 60rem;
+}
+.home .content h3{
+  font-size: 6rem;
+  text-transform: uppercase;
+  color:#000;
+  background: var(--main-color);
+}
+.home .content p{
+  font-size: 1rem;
+  font-weight: lighter;
+  line-height: 1.8;
+ padding: 1rem 0rem;
+color: #000;
+background: var(--main-color);
+
+}
+
+/*media queries*/
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+    background: var(--main-color);
+  }
+
+  .header {
+    padding: 1.5rem 2rem;
+  }
+  section {
+    padding: 6rem ;
+  }
+  .home {
+    background-position: left;
+    justify-content: center;
+   text-align:center;
+  }
+  .home .content h3 {
+    font-size: 4.5rem;
+   }
+  .home .content p {
+    font-size: 1.5rem;
+  }
+
+  .header .search-form{
+    width:90%;
+    right:2rem;
+    width:90%;
+    right:2rem;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    top: 0px;
+    align-items: center;
+    min-height: 8vh;
+    left:0px;
+    right:0px;
+    height: 100%;
+    width:100%;
+  }
+}
+/*--cart--*/
+* {
+  box-sizing: border-box;
+}
+ 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color: #7EC855;
+  font-family: 'Roboto', sans-serif;
+}
+shopping-cart {
+  width: 750px;
+  height: 423px;
+  margin: 80px auto;
+  background: #FFFFFF;
+  box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
+  border-radius: 6px;
+ 
+  display: flex;
+  flex-direction: column;
+}
+.title {
+  height: 60px;
+  border-bottom: 1px solid #E1E8EE;
+  padding: 20px 30px;
+  color: #5E6977;
+  font-size: 18px;
+  font-weight: 400;
+}
+ 
+.item {
+  padding: 20px 30px;
+  height: 120px;
+  display: flex;
+}
+ 
+.item:nth-child(3) {
+  border-top:  1px solid #E1E8EE;
+  border-bottom:  1px solid #E1E8EE;
+}
+.buttons {
+  position: relative;
+  padding-top: 30px;
+  margin-right: 60px;
+}
+.delete-btn,
+.like-btn {
+  display: inline-block;
+  Cursor: pointer;
+}
+.delete-btn {
+  width: 18px;
+  height: 17px;
+  background: url(&amp;quot;delete-icn.svg&amp;quot;) no-repeat center;
+}
+ 
+.like-btn {
+  position: absolute;
+  top: 9px;
+  left: 15px;
+  background: url('twitter-heart.png');
+  width: 60px;
+  height: 60px;
+  background-size: 2900%;
+  background-repeat: no-repeat;
+}
+.is-active {
+  animation-name: animate;
+  animation-duration: .8s;
+  animation-iteration-count: 1;
+  animation-timing-function: steps(28);
+  animation-fill-mode: forwards;
+}
+ 
+@keyframes animate {
+  0%   { background-position: left;  }
+  50%  { background-position: right; }
+  100% { background-position: right; }
+}
+.image {
+  margin-right: 50px;
+}
+ 
+
+.description {
+  padding-top: 10px;
+  margin-right: 60px;
+  width: 115px;
+}
+ 
+.description span {
+  display: block;
+  font-size: 14px;
+  color: #43484D;
+  font-weight: 400;
+}
+ 
+.description span:first-child {
+  margin-bottom: 5px;
+}
+.description span:last-child {
+  font-weight: 300;
+  margin-top: 8px;
+  color: #86939E;
+}
+.quantity {
+  padding-top: 20px;
+  margin-right: 60px;
+}
+.quantity input {
+  -webkit-appearance: none;
+  border: none;
+  text-align: center;
+  width: 32px;
+  font-size: 16px;
+  color: #43484D;
+  font-weight: 300;
+}
+ 
+button[class*=btn] {
+  width: 30px;
+  height: 30px;
+  background-color: #E1E8EE;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+}
+.minus-btn img {
+  margin-bottom: 3px;
+}
+.plus-btn img {
+  margin-top: 2px;
+}
+ 
+button:focus,
+input:focus {
+  outline:0;
+}
+.total-price {
+  width: 83px;
+  padding-top: 27px;
+  text-align: center;
+  font-size: 16px;
+  color: #43484D;
+  font-weight: 300;
+}
+
+ 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color:var(--main-color);
+  font-family: 'Roboto', sans-serif;
+}
+.shopping-cart {
+  width: 750px;
+  height: 423px;
+  margin: 80px auto;
+  background: #FFFFFF;
+  box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
+  border-radius: 6px;
+ 
+  display: flex;
+  flex-direction: column;
+}
+.title {
+  height: 60px;
+  border-bottom: 1px solid #E1E8EE;
+  padding: 20px 30px;
+  color: #5E6977;
+  font-size: 18px;
+  font-weight: 400;
+}
+ 
+.item {
+  padding: 20px 30px;
+  height: 120px;
+  display: flex;
+}
+ 
+.item:nth-child(3) {
+  border-top:  1px solid #E1E8EE;
+  border-bottom:  1px solid #E1E8EE;
+}
+.buttons {
+  position: relative;
+  padding-top: 30px;
+  margin-right: 60px;
+}
+.delete-btn,
+.like-btn {
+  display: inline-block;
+  Cursor: pointer;
+}
+.delete-btn {
+  width: 18px;
+  height: 17px;
+  background: url(&amp;quot;delete-icn.svg&amp;quot;) no-repeat center;
+}
+ 
+.like-btn {
+  position: absolute;
+  top: 9px;
+  left: 15px;
+  background: url('twitter-heart.png');
+  width: 60px;
+  height: 60px;
+  background-size: 2900%;
+  background-repeat: no-repeat;
+}
+.is-active {
+  animation-name: animate;
+  animation-duration: .8s;
+  animation-iteration-count: 1;
+  animation-timing-function: steps(28);
+  animation-fill-mode: forwards;
+}
+ 
+@keyframes animate {
+  0%   { background-position: left;  }
+  50%  { background-position: right; }
+  100% { background-position: right; }
+}
+.image {
+  margin-right: 50px;
+}
+ 
+
+.description {
+  padding-top: 10px;
+  margin-right: 60px;
+  width: 115px;
+}
+ 
+.description span {
+  display: block;
+  font-size: 14px;
+  color: #43484D;
+  font-weight: 400;
+}
+ 
+.description span:first-child {
+  margin-bottom: 5px;
+}
+.description span:last-child {
+  font-weight: 300;
+  margin-top: 8px;
+  color: #86939E;
+}
+.quantity {
+  padding-top: 20px;
+  margin-right: 60px;
+}
+.quantity input {
+  -webkit-appearance: none;
+  border: none;
+  text-align: center;
+  width: 32px;
+  font-size: 16px;
+  color: #43484D;
+  font-weight: 300;
+}
+ 
+button[class*=btn] {
+  width: 30px;
+  height: 30px;
+  background-color: #E1E8EE;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+}
+.minus-btn img {
+  margin-bottom: 3px;
+}
+.plus-btn img {
+  margin-top: 2px;
+}
+ 
+button:focus,
+input:focus {
+  outline:0;
+}
+.total-price {
+  width: 83px;
+  padding-top: 27px;
+  text-align: center;
+  font-size: 16px;
+  color: #43484D;
+  font-weight: 300;
+}
+/*cart ends*/
+@media (max-width: 768px) {
+  #main-btn {
+    display: inline-block;
+  }
+  .header .search-form{
+    width:90%;
+    right:2rem;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    top: 0px;
+    align-items: center;
+    min-height: 8vh;
+    left:0px;
+    right:0px;
+    height: 100%;
+    width:100%;
+  }
+  .header .navbar{
+    position: absolute;
+    color:#000;
+    top: 100%; right: -100;
+    background:var(--main-color);
+    width: 20rem;
+   
+  }
+  .header .navbar.active{
+right:0;
+left:0;
+position:fixed;
+}
+.header .navbar{
+  
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+  align-items: center;
+  min-height: 8vh;
+  left:0px;
+  right:0px;
+  height: 100%;
+  width:100%;
+}
+.header .navbar:before{
+  
+  position: absolute;
+  top:0px;
+  left:0px;
+  height: 100%;
+  width:100%;
+  z-index: -1;
+  opacity: 0.4;
+}
+  .header .navbar a{
+   display: flex;
+padding: 1.3rem;;
+    font-size: 2rem;
+   color: #000;
+    text-align: center;
+    text-decoration: none;
+
+  }
+  .header .search-form{
+    width:90%;
+    right:2rem;
+  }
+  }
+
+
+@media (max-width: 450px) {
+html{
+font-size:50%;
+}
+}
+
+.about .row{
+  display: flex;
+  align-items: center;
+  background: var(--main-color);
+  flex-wrap: wrap;
+  border:var(--border);
+}
+.about .row .image{
+  flex: 1 1 45rem;
+}
+.about .row .image img{
+  width: 100%;
+}
+.about .row .content{
+  flex: 1 1 45rem;
+  padding: 2rem;
+}
+.about .row .content h3{
+  font-size: 3.3rem;
+  color:#000;
+}
+.about .row .content p{
+  font-size: 2rem;
+  color: #000;
+  padding: 1rem 0;
+  line-height: 1.8;
+}
+.menu .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap:1.5rem;
+}
+.menu .box-container .box{
+  padding:5rem;
+  text-align: center;
+  border:var(--border);
+}
+.menu .box-container .box img{
+  height:25rem;
+}
+.menu .box-container .box{
+  color: #000;
+  font-size:2rem;
+  padding:1rem 0;
+border-color: var(--border);
+}
+.menu .box-container .price{
+  color: #000;
+  font: size 3.5rem;
+  padding: 5rem 0;
+  
+}
+.menu .box-container .price span{
+font-size:1.5rem;
+text-decoration: line-through;
+}
+.menu .box-container .box:hover{
+  background: #fff ;
+}
+.menu .box-container .box.hover >*{
+color:var(--black)
+}
+.review .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap:1.5rem; 
+}
+.review .box-container .box{
+  border:var(--border);
+  text-align: center;
+  padding:3rem 2rem;
+}
+
+.review .box-container .box p{
+  font-size: 1.6rem;
+  line-height: 1.8;
+  color: #000;
+  padding: 2rem 0;
+}
+
+.review .box-container .box  h3{
+  padding:1 rem 0;
+  font-size:2rem;
+  color: #000;
+}
+.review .box-container .box .stars i{
+  font-size:1.5rem;
+  color:var(--main-color);
+}
+.blogs .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap:1.5rem; 
+}
+.blogs .box-container .box{
+border:var(--border)
+}
+.blogs .box-container .box .image{
+  height:25rem;
+  overflow:hidden;
+width: 100%;
+}
+.blogs .box-container .box .image img{
+  height:100%;
+object-fit: cover;
+width: 100%;
+}
+.blogs .box-container .box:hover .image img{
+  transform: scale(1.2);
+}
+.blogs .box-container .box .content{
+  padding: 2rem;
+}
+.blogs .box-container .box .content .title{
+font-size: 2.5rem;
+line-height: 1.5;
+color: #000;
+}
+.blogs .box-container .box .content .title:hover{
+  color: #000;
+}
+.blogs .box-container .box .content span{
+  color: #000;
+  display: block;
+  padding-top: 2rem;
+  font-size: 2rem;
+}
+.blogs .box-container .box .content p{
+  font-size: 1.6rem;
+  line-height: 1.8;
+  color: #000;
+padding:1rem 0;
+}
+.contact .row{
+  display: flex;
+  align-items: center;
+  background: var(--main-color);
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.contact .row .map{
+  flex: 1 1 45rem;
+  width:100%;
+  object-fit: cover;
+}
+.contact .row form{
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
+}
+.contact .row form h3{
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  text-align: center;
+  color: #000;
+}
+.contact .row form .inputBox{
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background: var(--main-color);
+  border: var(--border);
+}
+.contact .row form .inputBox span{
+  color: #000;
+font-size: 2rem;
+padding-left: 2rem;
+}
+.contact .row form .inputBox input{
+  width:100%;
+  padding:2rem;
+  font-size:1.7rem;
+  color: #000;
+  text-transform: none;
+  background: none;
+}
+.footer{
+  background:var(--main-color);
+  text-align:center;
+}
+.footer .share{
+  padding:2rem 0;
+}
+.footer .share a{
+height:5.5rem;
+width:5rem;
+
+font-size: 3rem;
+color: #000;
+border:var(--main-color);
+margin:.5rem;
+
+}
+.footer .share a:hover{
+ background-color:white
+}
+.footer .links{
+  display:flex;
+  justify-content: center;
+  flex-wrap: wrap;
+ 
+  gap: 1px;
+}
+.footer .links a{
+
+  color: #000;
+  border:var(--border);
+  font-size: 2rem;
+}
+.footer .links a:hover{
+  background-color:white;
+}
+.footer .credit{
+  font-size:2rem;
+  color: #000;
+  font-weight:lighter;
+}
+
+
+
+  </style>
     <!--header section starts-->
     
 <header class="header">
